objects/VisualAntidote__Form_Style__c.object
<CustomObject>
    <description>Settings for Form style</description>
    <fields>
        <fullName>VisualAntidote__CSS_custom__c</fullName>
        <label>CSS custom</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__CSS_default__c</fullName>
        <label>CSS default</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recently_selected__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Theme was selected recently on</description>
        <label>Recently selected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Style_Type__c</fullName>
        <label>Style Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Style_data__c</fullName>
        <label>Style data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Tile_Preview_html__c</fullName>
        <description>HTML for Tile Preview</description>
        <label>Tile Preview html</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form Style</label>
    <listViews>
        <fullName>Nolan_Daigle_Form_Style</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>